--- a/package.json
+++ b/package.json
@@ -27,9 +27,9 @@
     "hash.js": "^1.1.7",
     "ripple-address-codec": "^4.1.0",
     "ripple-binary-codec": "^1.4.2",
-    "ripple-hashes": "^0.3.4",
+    "ripple-hashes": "git+https://github.com/dangell7/ripple-hashes",
     "ripple-keypairs": "^1.0.3",
-    "ripple-lib": "^1.6.4",
+    "ripple-lib": "^1.10.1",
     "ripple-secret-codec": "^1.0.2",
     "xrpl-secret-numbers": "^0.3.3",
     "xrpl-sign-keypairs": "^2.1.1"
